# gate-profiling

./: gate-profile.pbfsm  non-gate-profile.pbfsm  plot_battery.py  toyplane-gated.pbfsm
android-client/: .gitignore  build.gradle  settings.gradle
android-client/aars/: pocketsphinx-android-5prealpha-release.aar
android-client/app/: build.gradle
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/cpp/: CMakeLists.txt  main.cpp  ml2_audio.cpp  ml2_camera.cpp
android-client/app/src/main/java/edu/cmu/cs/owf/: ImagePHash.java  ML2AudioCapture.java  ML2CameraCapture.java  MainActivity.java  ThumbsUpDetection.java  VoiceCmdReceiver.java
android-client/app/src/main/proto/: owf.proto
android-client/app/src/main/res/layout/: activity_main.xml
android-client/app/src/main/res/values/: strings.xml
server/: owf_pb2.py  server.py
